force-app/main/default/objects/Quote/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>