force-app/main/default/objects/Quote/fields/DescriptionForTechnician__c.field-meta.xml
<CustomField>
    <fullName>DescriptionForTechnician__c</fullName>
    <label>Description for Technician</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>