force-app/main/default/objects/Quote/fields/DiscountReason__c.field-meta.xml
<CustomField>
    <fullName>DiscountReason__c</fullName>
    <label>Discount Reason</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>