force-app/main/default/objects/Quote/fields/GrossMargin__c.field-meta.xml
<CustomField>
    <fullName>GrossMargin__c</fullName>
    <formula>(1/(CURRENCYRATE(TEXT(CurrencyIsoCode))) *  TotalPrice__c ) -  TotalCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>