force-app/main/default/objects/Quote/fields/GrossMarginPercent__c.field-meta.xml
<CustomField>
    <fullName>GrossMarginPercent__c</fullName>
    <formula>GrossMargin__c /  (TotalPrice__c * (1/CURRENCYRATE(TEXT(CurrencyIsoCode))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>