force-app/main/default/objects/Quote/fields/IsCloned__c.field-meta.xml
<CustomField>
    <fullName>IsCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>