force-app/main/default/objects/Quote/fields/IsRecall__c.field-meta.xml
<CustomField>
    <fullName>IsRecall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall</label>
    <type>Checkbox</type>
</CustomField>