force-app/main/default/objects/Quote/fields/IsSendAddressToOpportunity__c.field-meta.xml
<CustomField>
    <fullName>IsSendAddressToOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Address to Opportunity</label>
    <type>Checkbox</type>
</CustomField>