force-app/main/default/objects/Quote/fields/NeedApprove__c.field-meta.xml
<CustomField>
    <fullName>NeedApprove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Approve</label>
    <type>Checkbox</type>
</CustomField>