force-app/main/default/objects/Quote/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>IF( IsCloned__c , &apos;Cloned &apos;&amp;HYPERLINK(&quot;/&quot;&amp;ParentId__c,  ParentId__r.QuoteNo__c , &apos;_blank&apos;) , &apos;Created&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>