force-app/main/default/objects/Quote/fields/OwnerSAPId__c.field-meta.xml
<CustomField>
    <fullName>OwnerSAPId__c</fullName>
    <formula>Owner:User.SAPId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner SAP ID</label>
    <type>Text</type>
</CustomField>