force-app/main/default/objects/Quote/fields/PrintedDate__c.field-meta.xml
<CustomField>
    <fullName>PrintedDate__c</fullName>
    <label>Printed Date</label>
    <type>Date</type>
</CustomField>