force-app/main/default/objects/Quote/fields/ProjectSalesFee__c.field-meta.xml
<CustomField>
    <fullName>ProjectSalesFee__c</fullName>
    <label>Project Sales Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>