force-app/main/default/objects/Quote/fields/ProjectSalesFeeValue__c.field-meta.xml
<CustomField>
    <fullName>ProjectSalesFeeValue__c</fullName>
    <label>Project Sales Fee Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>