force-app/main/default/objects/Quote/fields/QPdf_IsDisplayDiscount__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Discount</label>
    <type>Checkbox</type>
</CustomField>