force-app/main/default/objects/Quote/fields/QPdf_IsDisplayDiscountUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayDiscountUnitPrice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Unit Price</label>
    <type>Checkbox</type>
</CustomField>