force-app/main/default/objects/Quote/fields/QPdf_IsDisplayListPrice__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayListPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display List Price</label>
    <type>Checkbox</type>
</CustomField>