force-app/main/default/objects/Quote/fields/QPdf_IsDisplayProductSubtotal__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayProductSubtotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Product Subtotal</label>
    <type>Checkbox</type>
</CustomField>