force-app/main/default/objects/Quote/fields/QPdf_IsDisplayQuoteDiscount__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayQuoteDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Quote Discount</label>
    <type>Checkbox</type>
</CustomField>