force-app/main/default/objects/Quote/fields/QPdf_IsDisplayQuoteSubtotalPrice__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayQuoteSubtotalPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Quote Subtotal Price</label>
    <type>Checkbox</type>
</CustomField>