force-app/main/default/objects/Quote/fields/QPdf_IsDisplayQuoteTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>QPdf_IsDisplayQuoteTotalPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Quote Total Price</label>
    <type>Checkbox</type>
</CustomField>