force-app/main/default/objects/Quote/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <inlineHelpText>Hodnoty pole: “V+D+M” (výroba, doprava, montáž), “V+D” (výroba, doprava), “V” (výroba - EXW), “QS” (Quick Ship - skladová položka)</inlineHelpText>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quote_Type</valueSetName>
    </valueSet>
</CustomField>