force-app/main/default/objects/Quote/fields/QuoteDiscount__c.field-meta.xml
<CustomField>
    <fullName>QuoteDiscount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quote Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>