force-app/main/default/objects/Quote/fields/QuoteDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>QuoteDiscountValue__c</fullName>
    <label>Quote Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>