force-app/main/default/objects/Quote/fields/QuoteNo__c.field-meta.xml
<CustomField>
    <fullName>QuoteNo__c</fullName>
    <description>&lt;ProjectNumber&gt;.&lt;OppNo&gt;.&lt;QuoteVersion&gt;</description>
    <inlineHelpText>&lt;ProjectNumber&gt;.&lt;OppNo&gt;.&lt;QuoteVersion&gt;</inlineHelpText>
    <label>Quote No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>