force-app/main/default/objects/Quote/fields/QuoteTotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>QuoteTotalDiscount__c</fullName>
    <label>Quote Total Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>