force-app/main/default/objects/Quote/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>