force-app/main/default/objects/Quote/fields/sxc__c.field-meta.xml
<CustomField>
    <fullName>sxc__c</fullName>
    <formula>(CURRENCYRATE(TEXT(CurrencyIsoCode)) *  TotalPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sxc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>