force-app/main/default/objects/Quote/fields/TechnicianUserId__c.field-meta.xml
<CustomField>
    <fullName>TechnicianUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>