force-app/main/default/objects/Quote/fields/X1_of_the_margin__c.field-meta.xml
<CustomField>
    <fullName>X1_of_the_margin__c</fullName>
    <formula>GrossMargin__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1% of the margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>