force-app/main/default/objects/Quote/fields/x_Qli_Item_Free_Shipping__c.field-meta.xml
<CustomField>
    <fullName>x_Qli_Item_Free_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If related QLI record has Free Shipping then set this field to true for the AP purposes</description>
    <inlineHelpText>If related QLI record has Free Shipping then set this field to true for the AP purposes</inlineHelpText>
    <label>Qli Free Shipping</label>
    <type>Checkbox</type>
</CustomField>