force-app/main/default/objects/Quote/validationRules/QuoteOnlyFromPrinted.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteOnlyFromPrinted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISPICKVAL(PRIORVALUE(Status),&apos;Printed&apos;),  ISCHANGED(Status),  ISPICKVAL(Status, &apos;Quoted&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can change Status to &apos;Quoted&apos; only from &apos;Printed&apos;.</errorMessage>
</ValidationRule>